# SpaceInvadersOnCXXOpenGL

./: CMakeLists.txt  gamedef.h  main.cpp
lib/: stb_image.h
src/: ConfigSys.h  PlayerController.h  Scene.cpp  Scene.h  WPOINT.h  WRECT.h  map_and_keys.h
src/Objs/: Obj.h  PowerUp.cpp  PowerUp.h  Ship.cpp  Ship.h
src/opengl/: GLFWOverlay.cpp  GLFWOverlay.h
